--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -14,7 +14,7 @@ html {
   font-size: 16px;
 }
 body {
-  background-color: #fff;
+  background-color: white;
 }
 nav,
 button,
@@ -28,4 +28,162 @@ object, video,
 iframe {
    max-width: 100%;
    height: auto;
+}
+
+/*
+================================
+ Content
+ 
+================================
+*/
+
+/* General elements */
+
+/* Nav */
+.nav {
+  display: flex;
+  align-items: center;
+}
+.nav__btn {
+  padding: 1px;
+  cursor: pointer;
+}
+
+/* Class Modifiers */
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+
+/* 
+ *
+ * Head
+ *
+ *
+ */
+
+.head {
+  width: 100%;
+  height: 6rem;
+  background-color: #092a79;
+  background: linear-gradient(315deg, #092a79 0%, #00d4ff 100%);
+}
+.head__nav {
+  justify-content: center;
+  height: 100%;
+}
+
+/* 
+ *
+ * Head
+ *
+ * * * Nav
+ *
+ *
+ */
+
+.head .nav__header {
+  font-size: 2.1rem;
+  font-weight: 600;
+}
+.head .nav__link-img {
+  width: 72px;
+  height: 72px;
+  margin-right: 1rem;
+  filter: drop-shadow(10px 5px 12px grey);
+}
+.head .nav__btn {
+  padding: 1rem;
+  margin-left: 2rem;
+  font-size: 1rem;
+  font-weight: 600;
+  color: white;
+  background-color: #607d8b;
+  border: 2px solid black;
+  border-radius: 5px;
+}
+.head .nav__btn:hover {
+  background-color: #495e69;
+}
+
+/* 
+ *
+ * Main
+ *
+ *
+ */
+
+.main {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-position: center center;
+  background-size: cover;
+  transition: background-image 700ms;
+}
+.main__head {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+}
+
+/* 
+ *
+ * Main
+ *
+ * * * Hero
+ *
+ *
+ */
+
+.main .hero__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 18rem;
+  padding: 1rem;
+  background-color: darkgrey;
+  border: 3px solid black;
+  border-radius: 12px;
+  box-shadow: 0 5px 1rem black;
+  transform: translate(-50%, -50%);
+  transition: opacity 700ms, transform 300ms;
+}
+.main .hero__item {
+  display: flex;
+  align-items: center;
+  width: 70%;
+  padding: 1rem;
+}
+.main .hero__item--1 {
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.main .hero__item--2 {
+  align-items: center;
+  justify-content: space-evenly;
+}
+.main .hero__img {
+  height: 100%;
+  margin: 1rem;
+  border: 2px solid black;
+  border-radius: 50%;
+}
+.main .hero__label--title {
+  font-size: 1.9rem;
+  font-weight: 600;
+}
+.main .hero__label--desc {
+  font-size: 1.7rem;
+  text-align: center;
+}
+.main .hero__label--temp,
+.main .hero__label--humidity {
+  margin: 2px 0;
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+  cursor: pointer;
 }
