--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -39,14 +39,14 @@ iframe {
 
 /* General elements */
 
+/* Buttons */
+.btn {
+  cursor: pointer;
+}
 /* Nav */
 .nav {
   display: flex;
   align-items: center;
-}
-.nav__btn {
-  padding: 1px;
-  cursor: pointer;
 }
 
 /* Class Modifiers */
@@ -54,6 +54,16 @@ iframe {
 .hidden {
   visibility: hidden;
   opacity: 0;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(3px);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 /* 
@@ -64,6 +74,8 @@ iframe {
  */
 
 .head {
+  position: absolute;
+  z-index: 100;
   width: 100%;
   height: 6rem;
   background-color: #092a79;
@@ -83,20 +95,20 @@ iframe {
  *
  */
 
-.head .nav__header {
-  font-size: 2.1rem;
-  font-weight: 600;
-}
 .head .nav__link-img {
   width: 72px;
   height: 72px;
-  margin-right: 1rem;
+  margin: 1rem;
   filter: drop-shadow(10px 5px 12px grey);
 }
+.head .nav__label--title {
+  font-size: 1.9rem;
+  font-weight: 600;
+}
 .head .nav__btn {
-  padding: 1rem;
-  margin-left: 2rem;
-  font-size: 1rem;
+  width: 5rem;
+  padding: 0.5rem;
+  margin: 1rem;
   font-weight: 600;
   color: white;
   background-color: #607d8b;
@@ -115,34 +127,40 @@ iframe {
  */
 
 .main {
-  position: relative;
   width: 100%;
   height: 100%;
+}
+.main__content {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("/assets/images/haze.jpg");
   background-position: center center;
   background-size: cover;
   transition: background-image 700ms;
-}
-.main__head {
-  position: absolute;
-  top: 40%;
-  left: 50%;
 }
 
 /* 
  *
  * Main
  *
- * * * Hero
+ * * * Content
  *
  *
  */
 
-.main .hero__container {
+.main .content__container--hero {
+  position: absolute;
+  top: 50%;
+  left: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 18rem;
+  max-height: 22rem;
   padding: 1rem;
   background-color: darkgrey;
   border: 3px solid black;
@@ -151,36 +169,62 @@ iframe {
   transform: translate(-50%, -50%);
   transition: opacity 700ms, transform 300ms;
 }
-.main .hero__item {
+
+/* 
+ *
+ * Main
+ *
+ * * * Content
+ *
+ * * * * * Container
+ *
+ *
+ */
+
+.main .container__item {
   display: flex;
   align-items: center;
   width: 70%;
   padding: 1rem;
 }
-.main .hero__item--1 {
+.main .container__item--0 {
   flex-wrap: wrap;
   justify-content: center;
 }
-.main .hero__item--2 {
+.main .container__item--1 {
   align-items: center;
   justify-content: space-evenly;
 }
-.main .hero__img {
+.main .container__label--title {
+  font-size: 1.9rem;
+  font-weight: 600;
+}
+
+/* 
+ *
+ * Main
+ *
+ * * * Content
+ *
+ * * * * * Container
+ *
+ * * * * * * * Item
+ * 
+ *
+ */
+
+.main .item__img {
   height: 100%;
   margin: 1rem;
   border: 2px solid black;
   border-radius: 50%;
 }
-.main .hero__label--title {
-  font-size: 1.9rem;
-  font-weight: 600;
-}
-.main .hero__label--desc {
+.main .item__label--desc {
   font-size: 1.7rem;
   text-align: center;
 }
-.main .hero__label--temp,
-.main .hero__label--humidity {
+.main .item__label--temp,
+.main .item__label--humidity {
   margin: 2px 0;
   font-size: 1.5rem;
   font-weight: 600;
@@ -190,35 +234,38 @@ iframe {
 
 /* 
  *
- * Load
+ * Modal
  *
  *
  */
 
-.load {
-  width: 12rem;
-  height: 5rem;
-}
-.load__container {
+.modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 22rem;
-  height: 8rem;
-  padding: 1rem;
-  text-align: center;
-  background-color: #ff7300;
-  border-radius: 12px;
+  z-index: 100;
+  max-width: 20rem;
+  width: 80%;
+  height: 5rem;
+  padding: 1.5rem;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 48px 80px rgba(0, 0, 0, 0.9);
   transform: translate(-50%, -50%);
+  transition: opacity 700ms;
 }
-.load__label--title {
-  font-size: 1.9rem;
+.modal__btn--close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 3rem;
+  color: #333;
+  background: none;
+  border: none;
 }
-.load__bar {
-  width: 12rem;
-  height: 3rem;
-  padding: 1rem;
+.modal__btn--close:hover {
+  background: none;
 }
-.load__label--desc {
-  font-weight: 400;
+.modal__input {
+  padding: 5px;
 }
